tests/cases/errors/unsupported_binary_op/main.sv
module Top;
  int a;
  initial begin
    a += 1;
  end
endmodule
